# becs

./: .coveragerc  .gitignore  .pdm.toml  README.md  pyproject.toml  tox.ini
becs/: __init__.py  atomic.py  events.py  exceptions.py  meta.py  reactive_dict.py  tag.py
test/: test_atomic_ids.py  test_components.py  test_events.py  test_reactive_dict.py  test_tags.py  test_world.py
