[project]
name = "becs"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Orellana", email = "forellana@digithinkit.com"},
]
dependencies = []
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
test = "coverage run -m unittest discover -s ./test -p test_*.py"
watch = "watchmedo shell-command -p='*.py' -R -W -D -c='pdm run test' ."
coverage = "coverage report -m"
test-all = "tox -p all"

[tool.pdm.dev-dependencies]
dev = [
    "tox~=3.24",
    "tox-pdm~=0.3",
    "flake8~=4.0",
    "black<22,>=21.11b1",
    "watchdog[watchmedo]~=2.1",
    "coverage~=6.1",
]

